# wekws

./: .gitignore  pyproject.toml
examples/hi_xiaowen/s0/: run.sh
runtime/core/cmake/: onnxruntime.cmake
runtime/core/kws/: keyword_spotting.cc
runtime/onnxruntime/: CMakeLists.txt
tools/: compute_cmvn_stats.py
