[project]
name = "wekws"
version = "0.1.0"
description = "Production First and Production Ready End-to-End Keyword Spotting Toolkit"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pyyaml>=5.1",
    "tensorboard",
    "tensorboardX",
    "matplotlib",
    "onnx",
    "onnxruntime",
    "lmdb",
    "scipy",
    "tqdm",
    "langid",
    "pypinyin",
    "wenet",
    "torch==2.10.0",
    "torchaudio==2.10.0",
    "torchcodec>=0.10.0",
    "onnxscript>=0.6.2",
]

[dependency-groups]
dev = [
    "flake8==3.8.2",
    "flake8-bugbear",
    "flake8-comprehensions",
    "flake8-executable",
    "flake8-pyi==20.5.0",
    "mccabe",
    "pycodestyle==2.6.0",
    "pyflakes==2.2.0",
    "pre-commit==3.5.0",
    "pip>=26.0.1",
]

[tool.uv.sources]
wenet = { git = "https://github.com/xiaohuirong/wenet", branch = "main" }
# wenet = { path = "../wenet" }

